# CIS_520_Project_4

./: Design Document.docx  README.md  plot_analysis_info.py
3way-MPI/: CMakeLists.txt  MPI.c  bench_mpi.sh  mpi  mpi_script.sh  mpi_submit_all.sh
3way-MPI/analysis/: mpi_120M_16_runs.csv  mpi_120M_16_summary.txt  mpi_120M_1_runs.csv  mpi_120M_1_summary.txt  mpi_120M_20_runs.csv  mpi_120M_20_summary.txt  mpi_120M_2_runs.csv  mpi_120M_2_summary.txt  mpi_120M_4_runs.csv  mpi_120M_4_summary.txt  mpi_120M_8_runs.csv  mpi_120M_8_summary.txt  mpi_1440M_16_runs.csv  mpi_1440M_16_summary.txt  mpi_1440M_1_runs.csv  mpi_1440M_1_summary.txt  mpi_1440M_20_runs.csv  mpi_1440M_20_summary.txt  mpi_1440M_2_runs.csv  mpi_1440M_2_summary.txt  mpi_1440M_4_runs.csv  mpi_1440M_4_summary.txt  mpi_1440M_8_runs.csv  mpi_1440M_8_summary.txt  mpi_1700M_16_runs.csv  mpi_1700M_16_summary.txt  mpi_1700M_1_runs.csv  mpi_1700M_1_summary.txt  mpi_1700M_20_runs.csv  mpi_1700M_20_summary.txt  mpi_1700M_2_runs.csv  mpi_1700M_2_summary.txt  mpi_1700M_4_runs.csv  mpi_1700M_4_summary.txt  mpi_1700M_8_runs.csv  mpi_1700M_8_summary.txt  mpi_240M_16_runs.csv  mpi_240M_16_summary.txt  mpi_240M_1_runs.csv  mpi_240M_1_summary.txt  (+32 more)
3way-MPI/logs/: slurm_120M_16.out  slurm_120M_20.out  slurm_120M_4.out  slurm_120M_8.out  slurm_240M_16.out  slurm_240M_20.out  slurm_240M_8.out  slurm_60M_1.out  slurm_60M_16.out  slurm_60M_20.out  (+2 more)
3way-openmp/: .openmp.c.swp  CMakeLists.txt  openmp  openmp.c  openmp_script.sh  openmp_submit_all.sh
3way-pthread/: CMakeLists.txt  Makefile  pthread  pthread.c  pthread_script.sh  pthread_submit_all.sh
(+148 files in other folders)
